@@ -9,6 +9,8 @@ chaosvpn (2.01-0) unstable; urgency=low
   * Instantly abort on parse errors
   * crypto.c: Unlink tempfiles, do not let them lie around.
   * Standards-Version: 3.9.1
+  * Renamed config option "-a" to "-o" for 'oneshot mode' - describes
+    better what it is really doing.
 
  -- Sven-Haegar Koch <haegar@sdinet.de>  Wed, 13 Oct 2010 22:16:17 +0200
 
